Fix menu vertical positioning (on iOS w/menu bar)

--- a/app/main.css
+++ b/app/main.css
@@ -14,9 +14,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+
   background-color: black;
   color: white;
+  /* 
+    force to cover viewport
+    height: 100vh; will cause issues with menu bars on iOS
+  */
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 body.nocursor {
